@startuml diagramme-classes-pmp
!theme plain
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #334155
  FontSize 11
}
skinparam arrow {
  Color #475569
}
skinparam packageStyle rectangle

title Diagramme de classes — Portail des marchés publics\nDakar Dem Dikk (modèle de données Laravel)

package "Identités et rôles" as PKG_ID {

  class Role {
    +id : int
    +name : String
    --
    ADMIN
    RESPONSABLE_MARCHE
    FOURNISSEUR
  }

  class Utilisateur <<User>> {
    +id : int
    +name : String
    +email : String
    +password : String
    +is_active : boolean
    +role_id : int
  }

  class Fournisseur {
    +id : int
    +user_id : int
    +statut : String
    +nom_entreprise : String
    +ninea : String
    +rccm : String
    +adresse : String
    +telephone : String
    +email_contact : String
    +references_professionnelles : String
    --
    en_attente | actif | rejete
  }

  class "ResponsableMarche\n(PRM)" as PRM {
    +id : int
    +user_id : int
    +direction : String
    +fonction : String
    +telephone : String
  }
}

package "Marchés et documents" as PKG_AO {

  class AppelOffre {
    +id : int
    +responsable_marche_id : int
    +reference : String
    +titre : String
    +description : String
    +source_financement : String
    +mode_passation : String
    +type_marche : String
    +modalites_soumission_physique : Text
    +date_publication : DateTime
    +date_limite_depot : DateTime
    +statut : String
    +cahier_paiement_requis : boolean
    +cahier_prix_xof : int
    +attribution_statut : String
    +attributaire_nom : String
    +attribution_montant_xof : int
    +attribution_par_user_id : int
    --
    draft | published | closed | archived
  }

  class Document {
    +id : int
    +user_id : int
    +appel_offre_id : int
    +candidature_id : int
    +nom_fichier : String
    +type_fichier : String
    +categorie : String
    +chemin_fichier : String
    --
    pièces AO ou documents légaux
  }

  class CahierAccesAchat {
    +id : int
    +user_id : int
    +appel_offre_id : int
    +montant_xof : int
    +provider : String
    +statut : String
    +reference_externe : String
    +paye_le : DateTime
    --
    wave | orange_money | simulation
  }

  class Candidature {
    +id : int
    +appel_offre_id : int
    +fournisseur_id : int
    +date_soumission : DateTime
    +statut : String
    +montant_propose : decimal
    +commentaires : Text
    --
    module optionnel
    (CANDIDATURE_EN_LIGNE)
  }
}

package "Interaction et suivi" as PKG_INT {

  class Suggestion {
    +id : int
    +user_id : int
    +sujet : String
    +message : String
    +statut : String
  }

  class Notification {
    +id : int
    +user_id : int
    +message : String
    +audience : String
    +is_read : boolean
    --
    user | admin | prm
  }

  class ContactMessage {
    +id : int
    +nom : String
    +email : String
    +sujet : String
    +message : String
    +user_id : int
    +statut : String
    --
    visiteur ou utilisateur connecté
  }
}

' --- Identités
Role "1" -- "0..*" Utilisateur : attribue >
Utilisateur "1" o-- "0..1" Fournisseur : profil >
Utilisateur "1" o-- "0..1" PRM : profil >

' --- Marchés
PRM "1" -- "0..*" AppelOffre : est responsable de >
AppelOffre "1" *-- "0..*" Document : contient >
AppelOffre "1" -- "0..*" CahierAccesAchat : concerne >
AppelOffre "1" -- "0..*" Candidature : reçoit >
Fournisseur "1" -- "0..*" Candidature : soumet >
Candidature "1" o-- "0..*" Document : joint >

' --- Utilisateur transversal
Utilisateur "1" -- "0..*" Suggestion : envoie >
Utilisateur "1" -- "0..*" Notification : reçoit >
Utilisateur "1" -- "0..*" Document : dépose >
Utilisateur "1" -- "0..*" CahierAccesAchat : achète >
Utilisateur "0..1" ..> ContactMessage : peut être lié >

note bottom of Utilisateur
  **Administrateur** = Utilisateur avec rôle ADMIN
  (pas de table dédiée).
  Fournisseur **en_attente** : is_active=false
  mais connexion autorisée pour compléter
  le dossier et payer le cahier.
end note

note right of AppelOffre
  **modalites_soumission_physique** :
  dépôt des plis au siège.
  L'admin assigne un AO à un PRM
  (responsable_marche_id).
  Attribution du marché après clôture.
end note

note bottom of Document
  **categorie** : pièces AO (avis, cahier…)
  ou documents légaux fournisseur (RCCM, NINEA…).
  Le cahier payant nécessite un
  CahierAccesAchat complété.
end note

@enduml
